# captain-cleiton

./: .gitignore  AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  CMakeLists.txt  Credits.md  Floor.cpp  Lista.hpp  Listaestatica.hpp  ObjectStatic.cpp  ObjectStatic.hpp  Obstacle.cpp  README.md  Rigidbody.cpp  Rigidbody.hpp  TileMap.cpp  TileMap.h  main.cpp  makefile
Documentation/: Floor.md  TileMap.md
examples/DrawingModule_exemplo/: main.cpp  makefile
examples/DrawingModule_exemplo_2/: exemplo  main.cpp  makefile
examples/Floor_example/: main.cpp
examples/Player_exemplo/: main.cpp
exemple/DrawingModule_exemplo/: main.cpp  makefile
include/: AnimatedSprite.hpp  Chao.hpp  ColisionModule.hpp  Config.hpp  DrawTransform.hpp  DrawingModule.hpp  EnemiesModule.hpp  EnemyBat.hpp  Floor.h  Floor.hpp  Gui.hpp  Gun.hpp  Lista.hpp  Listaestatica.hpp  MapModule.h  MapModule.hpp  Monster.hpp  Obstacle.hpp  Player.hpp  PlayerController.hpp  Projetil.hpp  ProjetilModule.hpp  Rigidbody.hpp  SquareObstacle.hpp  TextModule.hpp  TileMap.hpp  Wall.hpp
src/: AnimatedSprite.cpp  Animation.cpp  Chao.cpp  ColisionModule.cpp  DrawTransform.cpp  DrawingModule.cpp  EnemiesModule.cpp  EnemyBat.cpp  Floor.cpp  Gui.cpp  Gun.cpp  MapModule.cpp  Monster.cpp  Obstacle.cpp  Player.cpp  PlayerController.cpp  Projetil.cpp  ProjetilModule.cpp  Rigidbody.cpp  SquareObstacle.cpp  TextModule.cpp  TileMap.cpp  Wall.cpp
utils/: SpriteCutter.cpp
